[tool.poetry]
name = "shift-scheduling-app"
version = "0.1.0"
description = "Shift scheduling optimization using PuLP"
authors = ["Unknown"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.4"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.3"
PuLP = "^2.8.0"

[tool.poetry.scripts]
shift-optimizer = "shift_optimizer:main"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
